[package]
name = "keymap"
description = "A lightweight key mapping library with compile-time validated derive macros and declarative configuration for multiple backends."
version = "1.0.0-rc"

[lib]
doctest = false

[workspace]
members = [
    "keymap_derive",
    "keymap_parser",
]

[workspace.package]
authors = ["Marut Khumtong <code@rezigned.com>"]
homepage = "https://github.com/rezigned/keymap-rs"
repository = "https://github.com/rezigned/keymap-rs"
edition = "2021"
keywords = ["terminal", "input", "event", "config", "keymap", "keybinding"]
license = "MIT"

[dependencies]
keymap_parser = { path = "./keymap_parser", version = "1.0.0-rc" }
keymap_derive = { path = "./keymap_derive", version = "1.0.0-rc", optional = true }
crossterm = { version = "0.29", optional = true }
termion = { version = "4.0", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["crossterm", "derive"]
derive = ["dep:keymap_derive"]

[dev-dependencies]
toml = "0.8"

[[example]]
name = "crossterm"
required-features = ["crossterm"]

[[example]]
name = "crossterm_derive"
path = "examples/crossterm/derive.rs"
required-features = ["crossterm", "derive"]

[[example]]
name = "crossterm_derived_config"
path = "examples/crossterm/derived_config.rs"
required-features = ["crossterm", "derive"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "termion_derive"
path = "examples/termion/derive.rs"
required-features = ["termion", "derive"]

[[example]]
name = "termion_derived_config"
path = "examples/termion/derived_config.rs"
required-features = ["termion", "derive"]
