[package]
name = "keymap"
description = "A lightweight key mapping library with compile-time validated derive macros and declarative configuration for multiple backends."
version = "1.0.0-rc.3"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[workspace]
members = [
    "keymap_derive",
    "keymap_parser",
]

[workspace.package]
authors = ["Marut Khumtong <code@rezigned.com>"]
homepage = "https://github.com/rezigned/keymap-rs"
repository = "https://github.com/rezigned/keymap-rs"
documentation = "https://docs.rs/keymap"
edition = "2021"
keywords = ["terminal", "input", "event", "config", "keymap", "keybinding", "wasm"]
license = "MIT"

[dependencies]
keymap_parser = { path = "./keymap_parser", version = "1.0.0-rc.3" }
keymap_derive = { path = "./keymap_derive", version = "1.0.0-rc.3", optional = true }
crossterm = { version = "0.29", optional = true }
termion = { version = "4.0", optional = true }
web-sys = { version = "0.3", features = ["KeyboardEvent", "KeyboardEventInit"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["derive"]
derive = ["dep:keymap_derive"]
crossterm = ["dep:crossterm"]
termion = ["dep:termion"]
wasm = ["dep:web-sys", "dep:wasm-bindgen"]

[dev-dependencies]
toml = "0.9"
wasm-bindgen-test = "0.3"

[[example]]
name = "crossterm"
required-features = ["crossterm"]

[[example]]
name = "crossterm_derive"
path = "examples/crossterm/derive.rs"
required-features = ["crossterm", "derive"]

[[example]]
name = "crossterm_derived_config"
path = "examples/crossterm/derived_config.rs"
required-features = ["crossterm", "derive"]

[[example]]
name = "termion"
required-features = ["termion"]

[[example]]
name = "termion_derive"
path = "examples/termion/derive.rs"
required-features = ["termion", "derive"]

[[example]]
name = "termion_derived_config"
path = "examples/termion/derived_config.rs"
required-features = ["termion", "derive"]

[[example]]
name = "modes"
path = "examples/modes.rs"
required-features = ["crossterm", "derive"]
