[package]
name = "keymap_derive"
description = "A derive macro to generate compile-time validated key mappings for enums, enabling declarative and ergonomic key binding support."
version = "1.0.0-rc.3"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
keymap_parser = { path = "../keymap_parser/", version = "1.0.0-rc.3" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"

[dev-dependencies]
# TODO: Find a proper way to fix dependency cycle in googleapis/release-please
keymap_dev = { path = "../", package = "keymap" }
serde = { version = "1.0.219", features = ["derive"] }
toml = "1.0"
