[package]
name = "keymap_parser"
description = "A Rust library to parse declarative key mapping configurations with support for sequences, key groups, and multiple formats like YAML and TOML."
version = "1.0.0-rc.4"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
strum_macros = "0.27.1"

[dev-dependencies]
toml = "1.0.1"
