[package]
name = "keymap-wasm"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

# Exclude from workspace
[workspace]

[dependencies]
keymap = { path = "../../", default-features = false, features = ["wasm", "derive"] }
keymap_parser = { path = "../../keymap_parser" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["KeyboardEvent", "Window", "Document", "HtmlElement", "KeyboardEventInit"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
